--- a/BigFileUpload/BigFileUpload.csproj
+++ b/BigFileUpload/BigFileUpload.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.2" />
         <PackageReference Include="AWSSDK.S3" Version="3.7.9.28" />
+        <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
